[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/DebugUI/DebugActionsPanel.gd" type="Script" id=1]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/DebugUI/DebugActionArgumentsWindow.tscn" type="PackedScene" id=3]

[node name="DebugActionsPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="HFlowContainer" parent="VBoxContainer"]
margin_right = 1280.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 3.0
margin_right = 1280.0
margin_bottom = 7.0

[node name="VBoxContainer2" type="HFlowContainer" parent="VBoxContainer"]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DebugActionArgumentsWindow" parent="." instance=ExtResource( 3 )]
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0

[connection signal="visibility_changed" from="." to="." method="_on_DebugActionsPanel_visibility_changed"]
[connection signal="onDoActionButton" from="DebugActionArgumentsWindow" to="." method="_on_DebugActionArgumentsWindow_onDoActionButton"]
